# paperTrack

./: .gitignore  .pylintrc  pyproject.toml
paperTrack/: main.py
paperTrack/src/app/controllers/: auth_controller.py
paperTrack/src/app/models/: base_model.py  user_model.py
paperTrack/src/database/: database.py
source/: main.py
